--- a/compiler/templates/workspaces.html
+++ b/compiler/templates/workspaces.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="logo">Compiler</div>
         <div class="user">
-            Naman Singh
+            {{ user.username }}
             <img src="/static/icons/icons8-user-60.png" alt="">
         </div>
     </nav>
