--- a/compiler/templates/index.html
+++ b/compiler/templates/index.html
@@ -17,15 +17,19 @@
     </style>
 </head>
 <body>
+    <overlay>
+        <div class="closeN" onclick="closeoverlay_new()"></div>
+        <input type="text" placeholder="Username of the person" id="NewGrant">
+            <button type="submit" class="primary_button" style="margin-left: 10px;" onclick="AddNewGrant()">Add</button>
+    </overlay>
     <div class="topNav">
 
         <!-- section for user profile and logout dropdown -->
 
         <div class="user">
-            <div class="dropdown1">
+            <div class="dropdown1" style="z-index: 3;">
                 <ul>
-                    <li style="height: 30px;"><a href="">profile</a></li>
-                    <li><a href="">Logout</a></li>
+                    <li><a href="/signout">Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -36,25 +40,28 @@
 
         <!-- Section for access management -->
 
-        <div class="share">
+        <div class="share" style="height: 30px; cursor: pointer;" title="Manage Access">
             <div class="dropdown2">
-                <ul>
-                    <li>User1<span><img height="15px" src="/static/close.png" alt=""></span></li>
-                    <li>User2<span><img height="15px" src="/static/close.png" alt=""></span></li>
-                    <li>User2<span><img height="15px" src="/static/close.png" alt=""></span></li>
-                    <li>User2<span><img height="15px" src="/static/close.png" alt=""></span></li>
+                <ul id="grantees">
+                    {% for grantees in ws.permissions %}
+                    <li>{{ grantees.username }}</li>
+                    {% endfor %}
+                    <li><button class="primary_button" onclick="NewAccess()">New Access</button></li>
                 </ul>
             </div>
         </div>
 
         <!-- Access management section ends -->
-        <div class="workspace_description" style="float: left; color:white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-top: 10px; margin-left: 40px; font-size: 18px;">
-            {{ workspace.name }}
-        </div>
+        <a href="/workspace">
+            <div class="workspace_description" style="float: left; color:white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-top: 10px; margin-left: 40px; font-size: 18px;">
+                {{ workspace.name }}
+            </div>
+        </a>
+        
         <!-- Section for compiler controllers -->
 
         <div class="compilerControls">
-            <div class="currentFile" style="margin-left: 20px;"></div>  <!-- current file name -->
+            <div class="currentFile"></div>  <!-- current file name -->
             <div class="play" style="margin-left: 50px;"><img src="/static/run.png" alt="">Record</div>  
             <div class="play"><img src="/static/upload.png" height="18px" alt="" onclick="askUpload()">
                 <form action="" method="post" enctype="multipart/form-data">
@@ -93,6 +100,7 @@
             <!-- Modal to ask for name of file or folder -->
 
             <div class="File_Folder_Modal">
+                <p id="modalTitle"></p>
                 <div class="close" onclick="closeoverlay()"></div>
                 <input type="text" id="File_Folder_Name">
                 <button onclick="creating_File_Folder()">Create</button>
@@ -138,7 +146,6 @@
         <!--Workspace, manages files Ends-->
 
 
-        
         <div class="wrap2">
             
             <!-- Section to display and write code -->
@@ -152,226 +159,8 @@
 
         </div>
 
-
-
     </div>
 
-    <!-- Editor script -->
-    
-    <script>
-        var editor = ace.edit("editor");
-        editor.setTheme("ace/theme/chaos");
-        editor.session.setMode("ace/mode/python");
-    </script>
-
-    <!-- Editor script ends -->
-
-    <script>
-
-        const syntexHighlighter = {'java': "ace/mode/java", 'py': "ace/mode/python", 'js': "ace/mode/javascript",'c': 'ace/mode/c_cpp' , 'cpp': 'ace/mode/c_cpp'} // syntax highlighter
-
-        folder = false;
-        file = false;
-
-        let fileEditing = ["",-1];  // information about file being editing
-
-        let parent = -1;  // id of the parent folder if the file are being created for the child.
-
-        isparent = false;  // if the file being created is a child of some folder
-
-        let workspace = document.URL.split('/')[4];  // workspace id
-
-
-        // Ajax code for functioning 
-        
-        async function create_File_Folder(name,url,parent=-1){
-            const xhr = new XMLHttpRequest();
-            xhr.open('POST', '/'+url);
-            xhr.setRequestHeader('X-CSRFToken', document.getElementsByName('csrfmiddlewaretoken')[0].value);
-            xhr.send(JSON.stringify({name: name, workspace: workspace,parent: parent}));
-            console.log(xhr.status)
-            xhr.onload = () => {
-                if(xhr.status != 200){
-                    alert("Error occured, can't create "+ name);
-                }
-                const FID = JSON.parse(xhr.responseText)['id'];
-                console.log(FID);
-                create(FID,name);
-            }
-
-        }
-        // AJAX codes End
-
-        // Function to view the child files of a folder
-        const viewFiles = (fNo) => {
-            const folder1 = document.getElementById('folder' + fNo);
-            if(folder1.style.display === 'none'){
-                folder1.style.display = 'block';
-            }else{
-                folder1.style.display = 'none';
-            }
-        }
-
-        // To close askName modal 
-        const closeoverlay = () => {
-            document.getElementsByClassName("File_Folder_Modal")[0].style.display = 'none';
-            file = false;
-            folder = false;
-        }
-
-
-        // Functon to ask for name of file or folder by popping up the modals
-        const askForName = (types,id=-1) => {
-            let inputTag = document.getElementById('File_Folder_Name');
-            parent = id;
-            if(id!=-1){
-                isparent = true;
-            }
-            if(types === 'folder'){
-                folder = true;
-                file = false;
-                inputTag.placeholder = 'Enter Folder Name';
-            }else{
-                folder = false;
-                file = true;
-                inputTag.placeholder = 'Enter File Name';
-            }
-            document.getElementsByClassName("File_Folder_Modal")[0].style.display = 'flex';
-        }  
-
-
-        // Function to create folder or file
-        function creating_File_Folder(){
-            const name = document.getElementById('File_Folder_Name').value;
-            if (folder) {
-                create_File_Folder(name,'createFolder');
-            }
-            if (file) {
-                create_File_Folder(name,'createFile',parent);
-                console.log(fileNo);
-            }
-            
-        }
-
-    
-        const create = (ffno,name) => {
-
-            document.getElementById('File_Folder_Name').value = "";  // to clear the input tag
-
-            if(folder){
-
-                const folder1 = document.createElement('div'); // to create a new folder
-                folder1.className = 'FolderWrap';
-                folder1.innerHTML = `<span><img height="20px" style="float: left; margin-right: 4px;" src="/static/folder2.png" alt=""></span> ${name}
-                <span onclick="viewFiles(${ffno})">
-                    <img height="14px" style="margin-left: 4px;" src="/static/arrow.png" alt="">
-                </span>
-                <div class="NewFile_forFolder" style="float: right;">
-                        <img src="/static/new_file.png" alt="" title="New File" onclick="askForName('file',${ffno})">
-                    </div>
-                <ul id="folder${ffno}">
-                </ul>`;
-                document.getElementsByClassName("sideNav")[0].appendChild(folder1);
-                folder = false;
-            }
-
-            if(file){
-
-                if(isparent){ // if the file is a child of some folder
-
-                    const file1 = document.createElement('li');
-                    file1.setAttribute('onclick',`fetchFile(${ffno})`);
-                    file1.className = 'file';
-                    file1.innerHTML = `<span><img src="/static/file.png" height="15px" alt=""></span> ${name}`;
-                    document.getElementById('folder' + parent).appendChild(file1);
-                    parent = 0;
-
-                }else{
-
-                    const file1 = document.createElement('p'); // to create a new file
-                    file1.className = 'file';
-                    file1.setAttribute('onclick','fetchFile('+ffno+')');
-                    file1.setAttribute('id',ffno);
-                    file1.innerHTML = `<span><img src="/static/file.png" height="15px" alt=""></span> ${name}`;
-                    document.getElementsByClassName("sideNav")[0].appendChild(file1);
-
-                }
-
-                file = false;
-                isparent = false;
-            }
-            
-            closeoverlay(); // to close the modal
-
-        }
-
-        // Function to fetch the file
-
-        const  askUpload = () => {
-            if(fileEditing[1] == -1){
-                alert("No file selected");
-                return
-            }
-            document.getElementById('fileId').setAttribute('value',fileEditing[1]);
-            document.getElementById("inputtingFile").click();
-            document.getElementById("uploadbutton").style.display = 'block';
-        }
-    
-
-    </script>
-
-
-    <script>
-
-        // Function to fetch file from backend
-
-        const fetchFile = (id) => {
-            fileEditing[1] = id;
-            const xhr = new XMLHttpRequest();
-            xhr.open('POST', '/fetchFile');
-            xhr.setRequestHeader('X-CSRFToken', document.getElementsByName('csrfmiddlewaretoken')[0].value);
-            xhr.send(JSON.stringify({id: id}));
-            xhr.onload = () => {
-
-                const file = JSON.parse(xhr.responseText);
-                editor.setValue(file['content'].replaceAll('\\n','\n'));
-                fileEditing[0] = file['name'];
-                document.getElementsByClassName('currentFile')[0].innerHTML = file['name'];
-                let extension = file['name'].split('.')[1];
-                editor.session.setMode(syntexHighlighter[extension.toLowerCase()]);
-
-            }
-        }
-
-        // Function to show output of the code
-        const showOutput = (result) => {
-            let terminal = document.getElementsByClassName('terminal')[0];
-            output = result['result'].replaceAll('\n','<br>');
-            terminal.innerHTML = `
-            ${output}
-            <br>
-            -------------------
-            Exit Code : ${result['exit_code']}
-            <br>
-            Error: ${result['error']}
-            `;
-        }
-        // Function to save and execute the file
-        const submitCode = () => {
-            const xhr = new XMLHttpRequest();
-            xhr.open('POST', '/submitCode');
-            xhr.setRequestHeader('X-CSRFToken', document.getElementsByName('csrfmiddlewaretoken')[0].value);
-            xhr.send(JSON.stringify({content: editor.getValue(),name: fileEditing[0],id: fileEditing[1]}));
-
-            xhr.onload = () => {
-                if(xhr.status != 200){
-                    alert("Error occured, can't save and execute the file");
-                }
-                result = xhr.responseText;
-                showOutput(JSON.parse(result)['output']);
-            }
-        }
-
-    </script>
+    <script src="/static/js/main.js"></script>
 </body>
 </html>
