--- a/compiler/templates/index.html
+++ b/compiler/templates/index.html
@@ -62,7 +62,7 @@
 
         <div class="compilerControls">
             <div class="currentFile"></div>  <!-- current file name -->
-            <div class="play" style="margin-left: 50px;"><img src="/static/run.png" alt="">Record</div>  
+            <!-- <div class="play" style="margin-left: 50px;"><img src="/static/run.png" alt="">Record</div>   -->
             <div class="play"><img src="/static/upload.png" height="18px" alt="" onclick="askUpload()">
                 <form action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
